Feeds background click/preloader state

--- a/packages/client-core/src/socialmedia/components/FeedForm/FeedForm.module.scss
+++ b/packages/client-core/src/socialmedia/components/FeedForm/FeedForm.module.scss
@@ -48,7 +48,11 @@
     }
     .buttonWraper{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        padding-bottom: 15px;
+        button{
+            width: 100%;
+        }
     }
     .submit{
         display: block;
