--- a/packages/client-core/src/socialmedia/components/Preloader/Preloader.module.scss
+++ b/packages/client-core/src/socialmedia/components/Preloader/Preloader.module.scss
@@ -1,23 +1,31 @@
 .ldsRing {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
+  //display: inline-block;
+  //position: relative;
+  //width: 80px;
+  //height: 80px;
   position: fixed;
-  left: calc(50% - 40px);
-  top: calc(50% - 40px);
+  //left: calc(50% - 40px);
+  //top: calc(50% - 40px);
   background: #fff;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.6);
   &:after{
     display: block;
     height: 10pt;
     content: "Publishing...";
     position: absolute;
-    bottom: 0;
     width: 100%;
     font-size: 15pt;
     color: #000;
-    margin-left: -10px;
     padding-top: 10pt;
+    left: calc(50% - 50px);
+    top: calc(50% + 50px);
   }
   div {
     box-sizing: border-box;
