--- a/packages/social/src/pages/index.module.scss
+++ b/packages/social/src/pages/index.module.scss
@@ -34,7 +34,7 @@ body{
   section{
     display: none;
     &:nth-child(1){
-      display: block !important;
+      display: flex !important;
       section{
         display: block;
       }
