--- a/packages/client-core/src/socialmedia/components/Preloader/Preloader.module.scss
+++ b/packages/client-core/src/socialmedia/components/Preloader/Preloader.module.scss
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.6);
-  &:after{
+  span{
     display: block;
     height: 10pt;
     content: "Publishing...";
