Hints/preloader/backBtn

--- a/packages/client-core/src/socialmedia/components/Preloader/Preloader.module.scss
+++ b/packages/client-core/src/socialmedia/components/Preloader/Preloader.module.scss
@@ -14,7 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.7);
+  z-index: 999;
   span{
     display: block;
     height: 10pt;
