--- a/packages/client-core/src/socialmedia/components/Featured/Featured.module.scss
+++ b/packages/client-core/src/socialmedia/components/Featured/Featured.module.scss
@@ -25,8 +25,17 @@
         &.listItem_width2{        
             flex: 0 40%;            
             padding: 7pt 7pt 0 0;
-            height: 187pt;
+            height: 181pt;
         }
+        @media screen and (min-width: 499px){
+            &.listItem_width2:nth-child(3){
+                height: 180pt;
+            }
+            &.listItem_width2:nth-child(4n+10){
+                height: 180pt;
+            }
+        }
+
         &.listItem_top1{
             margin-top: -142px;
         }
@@ -49,6 +58,12 @@
         @media screen and (max-width: 499px){
             &.listItem_width2{
                 height: 150pt;
+            }
+            &.listItem_width2:nth-child(1){
+                height: 125pt;
+            }
+            &.listItem_width2:nth-child(3n+9){
+                height: 125pt;
             }
             &.listItem_width3{
                 height: 232pt;
