Added Video mapping for different 3d Object.

--- a/packages/client/src/pages/styles.scss
+++ b/packages/client/src/pages/styles.scss
@@ -94,6 +94,8 @@ body{
   overscroll-behavior-y: contain;
 }
 
+body>video { display: none; }
+
 .menuDrawerOpened{
   [class*=InstanceChat_instance-chat-container]{
     right: 25vw;
