add /event/ UI and layout for... the event

--- a/packages/client-core/src/user/components/UserMenu/UserMenu.module.scss
+++ b/packages/client-core/src/user/components/UserMenu/UserMenu.module.scss
@@ -28,11 +28,11 @@
         display: flex;
         border-radius: 5px;
         background: #00000050;
-        width: 200px;
+        width: 12em;
         margin: auto;
 
         .materialIconBlock {
-            padding: 15px;
+            padding: 1em;
 
             svg{
                 opacity: 0.4;
