jump container display none

--- a/packages/client-core/src/common/components/EmoteMenu/EmoteMenu.module.scss
+++ b/packages/client-core/src/common/components/EmoteMenu/EmoteMenu.module.scss
@@ -20,7 +20,7 @@
         display: none;  /* Safari and Chrome */
     }
 
-    .jumpContainer { margin-top: 20px; }
+    .jumpContainer { display: none; margin-top: 20px; }
 
     .menuItem {
         background: rgba(0, 0, 0, 0.2);
