--- a/packages/client-core/src/common/components/EmoteMenu/EmoteMenu.module.scss
+++ b/packages/client-core/src/common/components/EmoteMenu/EmoteMenu.module.scss
@@ -23,7 +23,7 @@
     .jumpContainer { display: none; margin-top: 20px; }
 
     .menuItem {
-        background: rgba(0, 0, 0, 0.2);
+        background: transparent;
         border-radius: 50%;
         margin: 5px;
         height: 50px;
@@ -37,23 +37,9 @@
         justify-content: center;
         align-items: center;
         min-width: 0;
+        transition: all 0.15s cubic-bezier(.18,.89,.32,1.28);
 
-        &::before {
-            content: " ";
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            display: block;
-            transition: all 0.15s cubic-bezier(.18,.89,.32,1.28);
-            background: #5f5ff1;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            border-radius: 50%;
-            transform: scale(0);
-        }
-
-        &:hover::before { transform: scale(1); }
+        &:hover { transform: scale(1.2); }
         > svg { height: 50%; width: 50%; }
     }
 }
