Animation Bug fix, Emote menu ui fix, Volume slider mapped with videos

--- a/packages/client-core/src/common/components/EmoteMenu/EmoteMenu.module.scss
+++ b/packages/client-core/src/common/components/EmoteMenu/EmoteMenu.module.scss
@@ -41,5 +41,10 @@
 
         &:hover { transform: scale(1.2); }
         > svg { height: 50%; width: 50%; }
+
+        @media screen and (max-height: 475px) {
+            height: 40px;
+            width: 40px;
+        }
     }
 }
