--- a/packages/social/src/pages/index.module.scss
+++ b/packages/social/src/pages/index.module.scss
@@ -24,6 +24,12 @@ body{
 }
 .isIos{
 	padding-top: 2rem;
+	height: 100vh;
+	width: 100vh;
+	background: rgb(255,255,255);
+}
+.hideContentOnRecord{
+	background: transparent !important;
 }
 .hideContent{
   nav{
