Updated content pack patch to invalidate Cloudfront cache.
Needed to invalidate Cloudfront cache on content-pack patch
for manifest.json, plus whatever files were updated.

--- a/packages/client-core/src/admin/components/ContentPack/ContentPack.module.scss
+++ b/packages/client-core/src/admin/components/ContentPack/ContentPack.module.scss
@@ -219,3 +219,44 @@
   align-items: center;
   margin-top: 10px;
 }
+
+
+.pack-select {
+  margin-bottom: 10px;
+}
+
+.error-message {
+  color: red;
+  font-size: 1.5em;
+  margin-top: 10px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .title {
+    font-size: 1.5em;
+    color: black;
+  }
+
+  .closeButton {
+    &:hover {
+      cursor: pointer;
+      color: red;
+    }
+  }
+}
+
+.processing {
+  color: black;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+
+  .text {
+    margin-left: 5px;
+    font-size: 1.5em;
+  }
+}
