--- a/packages/client-core/src/admin/components/Scenes/Scenes.module.scss
+++ b/packages/client-core/src/admin/components/Scenes/Scenes.module.scss
@@ -167,3 +167,15 @@
 .locationModalButtons {
   justify-content: space-between;
 }
+
+.checkbox {
+  color: white !important;
+}
+
+.open-modal {
+  position: fixed;
+  left: 45%;
+  z-index: 1300;
+  top: 10px;
+}
+
