--- a/packages/client-core/src/admin/components/ContentPack/ContentPack.module.scss
+++ b/packages/client-core/src/admin/components/ContentPack/ContentPack.module.scss
@@ -164,6 +164,7 @@
       .container {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
 
         .avatar,
         .scene {
